--- a/index.html
+++ b/index.html
@@ -1,9 +1,89 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>WebNery</title>
-    </head>
-    <body>
-        
-    </body>
+
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Hello Bulma!</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@1.0.2/css/bulma.min.css">
+</head>
+
+<body>
+    <nav class="navbar">
+        <div class="container">
+            <div id="navMenu" class="navbar-menu">
+                <div class="navbar-start">
+                    <a class="navbar-item">
+                        Home
+                    </a>
+                    <a class="navbar-item">
+                        Documentation
+                    </a>
+                </div>
+
+                <div class="navbar-end">
+                    <div class="navbar-item">
+                        <div class="buttons">
+                            <a class="button is-dark">Github</a>
+                            <a class="button is-link">Download</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </nav>
+    <section class="hero is-large has-background-info-light">
+        <div class="hero-body">
+            <p class="subtitle">Nerias Andrade</p>
+            <p class="title">Full Stack Developer</p>
+        </div>
+
+        <div class="hero-foot">
+            <nav class="tabs is-boxed is-fullwidth">
+              <div class="container">
+                <ul>
+                  <li class="is-active">
+                    <a>Overview</a>
+                  </li>
+                  <li>
+                    <a>Modifiers</a>
+                  </li>
+                  <li>
+                    <a>Grid</a>
+                  </li>
+                  <li>
+                    <a>Elements</a>
+                  </li>
+                  <li>
+                    <a>Components</a>
+                  </li>
+                  <li>
+                    <a>Layout</a>
+                  </li>
+                </ul>
+              </div>
+            </nav>
+          </div>
+    </section>
+    
+    <section class="section" id="about-me"></section>
+    <section class="section has-background-info-light" id="projects"></section>
+    <section class="section" id="skills"></section>
+    <section class="section has-background-info-light" id="testimonials-cert"></section>
+    <section class="section" id="contact-me"></section>
+    <footer class="footer">
+        <div class="content has-text-centered">
+          <p>
+            <strong>Bulma</strong> by <a href="https://jgthms.com">Jeremy Thomas</a>.
+            The source code is licensed
+            <a href="https://opensource.org/license/mit">MIT</a>. The
+            website content is licensed
+            <a href="https://creativecommons.org/licenses/by-nc-sa/4.0//"
+              >CC BY NC SA 4.0</a
+            >.
+          </p>
+        </div>
+      </footer>
+</body>
+
 </html>
